<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etConfirmPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPwd" />

    <Button
        android:id="@+id/btnDoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/age"
        app:layout_constraintEnd_toStartOf="@id/tvDoB"
        app:layout_constraintStart_toStartOf="@id/etPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

    <TextView
        android:id="@+id/tvDoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/age"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/btnDoB"
        app:layout_constraintStart_toEndOf="@id/btnDoB"
        app:layout_constraintTop_toTopOf="@id/btnDoB" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="@id/rgGender"
        app:layout_constraintEnd_toStartOf="@id/rgGender"
        app:layout_constraintStart_toStartOf="@id/etPhoneNumber"
        app:layout_constraintTop_toTopOf="@id/rgGender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/tvGender"
        app:layout_constraintTop_toBottomOf="@id/btnDoB">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/spTracks"
        app:layout_constraintEnd_toStartOf="@id/spTracks"
        app:layout_constraintStart_toStartOf="@id/tvGender"
        app:layout_constraintTop_toTopOf="@id/spTracks" />

    <Spinner
        android:id="@+id/spTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:entries="@array/tracks"
        app:layout_constraintStart_toEndOf="@id/tvTracks"
        app:layout_constraintTop_toBottomOf="@id/rgGender" />

    <LinearLayout
        android:id="@+id/llHobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spTracks">

        <CheckBox
            android:id="@+id/chbReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading" />

        <CheckBox
            android:id="@+id/chbWriting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writing" />

        <CheckBox
            android:id="@+id/chbInsta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insta" />

        <CheckBox
            android:id="@+id/chbDance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dance" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/llHobby"/>

    <FrameLayout
        android:id="@+id/frag1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>